--- a/tool/readme.html
+++ b/tool/readme.html
@@ -7,7 +7,10 @@
     <h1 id="the-consultancy">The Consultancy</h1>
 <div style="text-align:center; font-size:12px;">
 
-[resume](resume.md) | [automator](automator.md) | [consultant](consultant.md) | [devops](devops.md)
+<div><a src=resume.md>resume</a></div>
+<div><a src=automator.md>automator</a></div>
+<div><a src=consultant.md>consultant</a></div>
+<div><a src=devops.md>devops</a></div>
 
 </div>
 
