--- a/tool/resume.html
+++ b/tool/resume.html
@@ -6,10 +6,10 @@
     </head>
     <h1 id="joel-e-carlson">Joel E Carlson</h1>
 <p>4445 St Andrews Drive Blaine, MN 55449 | joel.elmer.carlson@outlook.com | (612) 839-0754</p>
-<p>I am pursuing the role of Principal Engineer. I have extensive automation
-expertise in Linux, NodeJS, Python, Haskell and cloud platforms. I will
-use my extensive engineering experience to deliver AI, Automation and
-Cloud projects for the most mission-critical workloads.</p>
+<p>AI, Automation and Cloud Consultant w/ proven leadership in the
+following industries: investment banking, energy, healthcare and
+technology. Extensive experience delivering projects w/ cloud-native
+Kubernetes, AWS, Azure and GCVE/GCP.</p>
 <p>&mdash; Github.com: https://github.com/joelelmercarlson</p>
 <p>&mdash; LinkedIN: https://www.linkedin.com/in/joel-carlson-290ba0</p>
 <h1 id="experience">Experience</h1>
