--- a/html/consultant.html
+++ b/html/consultant.html
@@ -47,5 +47,5 @@ business success.</p>
 <h1 id="contact">Contact</h1>
 <p>Lets talk about your project.</p>
 <p>"Joel E Carlson" &lt;Joel.Elmer.Carlson@outlook.com&gt;</p>
-<p>&mdash; <a href="https://github.com/joelelmercarlson/about">Company</a></p>
+<p>&mdash; <a href="https://github.com/joelelmercarlson/about">Github</a></p>
 <p>&mdash; <a href="https://www.linkedin.com/in/joel-carlson-290ba0">LinkedIN</a></p></body></html>
