--- a/html/resume.html
+++ b/html/resume.html
@@ -10,8 +10,8 @@
 following industries: investment banking, energy, healthcare and
 technology. Extensive experience delivering projects w/ cloud-native
 Kubernetes, AWS, Azure and GCVE/GCP.</p>
-<p>&mdash; Github.com: https://github.com/joelelmercarlson</p>
-<p>&mdash; LinkedIN: https://www.linkedin.com/in/joel-carlson-290ba0</p>
+<p>&mdash; <a href="https://github.com/joelelmercarlson">Github</a></p>
+<p>&mdash; <a href="https://www.linkedin.com/in/joel-carlson-290ba0">LinkedIN</a></p>
 <h1 id="experience">Experience</h1>
 <p>Optum | Eden Prairie, MN | Principal Engineer | 2010 – 2025</p>
 <ul>
