--- a/html/consultant.html
+++ b/html/consultant.html
@@ -1,9 +1,12 @@
-<!DOCTYPE html>
+
+    <!DOCTYPE html>
     <html lang="en">
     <head>
     <meta charset="UTF-8">
-    <title>loki</title>
+    <title>The Consultancy</title>
+    <link rel="style" href="legal.css">
     </head>
+    <body>
     <h1 id="principal-engineer">Principal Engineer</h1>
 <p>The Principal Engineer Consultant will provide external
 technical leadership and strategic guidance across critical engineering
@@ -48,4 +51,6 @@ business success.</p>
 <p>Lets talk about your project.</p>
 <p>"Joel E Carlson" &lt;Joel.Elmer.Carlson@outlook.com&gt;</p>
 <p>&mdash; <a href="https://github.com/joelelmercarlson/about">Github</a></p>
-<p>&mdash; <a href="https://www.linkedin.com/in/joel-carlson-290ba0">LinkedIN</a></p></body></html>
+<p>&mdash; <a href="https://www.linkedin.com/in/joel-carlson-290ba0">LinkedIN</a></p>
+    </body></html>
+    
