--- a/html/resume.html
+++ b/html/resume.html
@@ -1,9 +1,12 @@
-<!DOCTYPE html>
+
+    <!DOCTYPE html>
     <html lang="en">
     <head>
     <meta charset="UTF-8">
-    <title>loki</title>
+    <title>The Consultancy</title>
+    <link rel="style" href="legal.css">
     </head>
+    <body>
     <h1 id="joel-e-carlson">Joel E Carlson</h1>
 <p>4445 St Andrews Drive Blaine, MN 55449 | joel.elmer.carlson@outlook.com | (612) 839-0754</p>
 <p>AI, Automation and Cloud Consultant w/ proven leadership in the
@@ -25,4 +28,6 @@ Kubernetes, AWS, Azure and GCVE/GCP.</p>
 <li>Consistent delivery of leadership and innovative solutions to the company.</li>
 </ul>
 <h1 id="education">Education</h1>
-<p>Bachelor of Arts in Computer Science | University of Minnesota, Morris MN | Graduated 1995</p></body></html>
+<p>Bachelor of Arts in Computer Science | University of Minnesota, Morris MN | Graduated 1995</p>
+    </body></html>
+    
