--- a/html/readme.html
+++ b/html/readme.html
@@ -1,9 +1,12 @@
-<!DOCTYPE html>
+
+    <!DOCTYPE html>
     <html lang="en">
     <head>
     <meta charset="UTF-8">
-    <title>loki</title>
+    <title>The Consultancy</title>
+    <link rel="style" href="legal.css">
     </head>
+    <body>
     <h1 id="the-consultancy">The Consultancy</h1>
 <div style="text-align:center; font-size:14px;">
 
@@ -42,4 +45,6 @@ clients implement the art of the possible.</p>
 <p>&mdash; North-America, Asia/Pacific.</p>
 <h1 id="contact">Contact</h1>
 <p>Lets talk about your project.</p>
-<p>&mdash; "Joel E Carlson" &lt;joel.elmer.carlson@outlook.com&gt;</p></body></html>
+<p>&mdash; "Joel E Carlson" &lt;joel.elmer.carlson@outlook.com&gt;</p>
+    </body></html>
+    
