--- a/html/readme.html
+++ b/html/readme.html
@@ -4,7 +4,7 @@
     <head>
     <meta charset="UTF-8">
     <title>The Consultancy</title>
-    <link rel="style" href="legal.css">
+    <link rel="style" href="clean.css">
     </head>
     <body>
     <h1 id="the-consultancy">The Consultancy</h1>
