--- a/html/consultant.html
+++ b/html/consultant.html
@@ -4,7 +4,7 @@
     <head>
     <meta charset="UTF-8">
     <title>The Consultancy</title>
-    <link rel="style" href="legal.css">
+    <link rel="style" href="clean.css">
     </head>
     <body>
     <h1 id="principal-engineer">Principal Engineer</h1>
@@ -16,7 +16,7 @@ technical challenges, and elevate engineering practices. This role
 is ideal for organizations that need senior-level expertise without a
 permanent hire, ensuring access to world-class engineering leadership
 on demand.</p>
-<h1 id="key-responsibilities">Key Responsibilities</h1>
+<h1 id="responsibilities">Responsibilities</h1>
 <ul>
 <li>Strategic Advisory: Assess client systems and recommend long-term technical strategies aligned with business objectives.</li>
 <li>Architecture &amp; Design: Deliver high-level system designs and frameworks that ensure scalability, security, and performance.</li>
