--- a/html/readme.html
+++ b/html/readme.html
@@ -12,6 +12,7 @@
 
 <div><a href="resume.html">resume</a></div>
 <div><a href="consultant.html">consultant</a></div>
+<div><a href="mission.html">mission</a></div>
 
 </div>
 
