--- a/html/consultant.html
+++ b/html/consultant.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <h1 id="principal-engineer">Principal Engineer</h1>
-<p>The Principal Engineer Consultant will provide external
+<p>The Principal Engineer will provide external
 technical leadership and strategic guidance across critical engineering
 initiatives. As an independent expert, the consultant will partner with
 client organizations to design scalable architectures, solve complex
@@ -42,15 +42,16 @@ on demand.</p>
 <li>Business acumen to align technical decisions with organizational strategy.</li>
 </ul>
 <h1 id="impact">Impact</h1>
-<p>The Principal Engineer Consultant acts as a trusted external partner,
+<p>The Principal Engineer acts as a trusted external partner,
 enabling organizations to access senior-level technical leadership without
 long-term overhead. By combining strategic vision with hands-on expertise,
 the consultant ensures that engineering decisions drive sustainable
 business success.</p>
-<h1 id="contact">Contact</h1>
+    <h1 id="contact">Contact</h1>
 <p>Lets talk about your project.</p>
 <p>"Joel E Carlson" &lt;Joel.Elmer.Carlson@outlook.com&gt;</p>
 <p>&mdash; <a href="https://github.com/joelelmercarlson/about">Github</a></p>
 <p>&mdash; <a href="https://www.linkedin.com/in/joel-carlson-290ba0">LinkedIN</a></p>
-    </body></html>
+    </body>
+    </html>
     
