--- a/html/readme.html
+++ b/html/readme.html
@@ -8,11 +8,12 @@
     </head>
     <body>
     <h1 id="the-consultancy">The Consultancy</h1>
-<div style="text-align:center; font-size:14px;">
+<div style="text-align:center; font-size:12px;">
 
-<div><a href="resume.html">resume</a></div>
-<div><a href="consultant.html">consultant</a></div>
-<div><a href="mission.html">mission</a></div>
+<a href="resume.html">resume</a> |
+<a href="consultant.html">consultant</a> |
+<a href="mission.html">mission</a> |
+<a href="tools.html">tools</a>
 
 </div>
 
@@ -44,8 +45,11 @@ clients implement the art of the possible.</p>
 <p>&mdash; 5+ years AI development</p>
 <h1 id="locations">Locations</h1>
 <p>&mdash; North-America, Asia/Pacific.</p>
-<h1 id="contact">Contact</h1>
+    <h1 id="contact">Contact</h1>
 <p>Lets talk about your project.</p>
-<p>&mdash; "Joel E Carlson" &lt;joel.elmer.carlson@outlook.com&gt;</p>
-    </body></html>
+<p>"Joel E Carlson" &lt;Joel.Elmer.Carlson@outlook.com&gt;</p>
+<p>&mdash; <a href="https://github.com/joelelmercarlson/about">Github</a></p>
+<p>&mdash; <a href="https://www.linkedin.com/in/joel-carlson-290ba0">LinkedIN</a></p>
+    </body>
+    </html>
     
