--- a/html/resume.html
+++ b/html/resume.html
@@ -13,8 +13,6 @@
 expertise in Linux, NodeJS, Python, Haskell and cloud platforms. I will
 use my extensive engineering experience to deliver AI, Automation and
 Cloud projects for the most mission-critical workloads.</p>
-<p>&mdash; <a href="https://github.com/joelelmercarlson">Github</a></p>
-<p>&mdash; <a href="https://www.linkedin.com/in/joel-carlson-290ba0">LinkedIN</a></p>
 <h1 id="experience">Experience</h1>
 <p>Optum | Eden Prairie, MN | Principal Engineer | 2010 – 2025</p>
 <ul>
@@ -29,5 +27,11 @@ Cloud projects for the most mission-critical workloads.</p>
 </ul>
 <h1 id="education">Education</h1>
 <p>Bachelor of Arts in Computer Science | University of Minnesota, Morris MN | Graduated 1995</p>
-    </body></html>
+    <h1 id="contact">Contact</h1>
+<p>Lets talk about your project.</p>
+<p>"Joel E Carlson" &lt;Joel.Elmer.Carlson@outlook.com&gt;</p>
+<p>&mdash; <a href="https://github.com/joelelmercarlson/about">Github</a></p>
+<p>&mdash; <a href="https://www.linkedin.com/in/joel-carlson-290ba0">LinkedIN</a></p>
+    </body>
+    </html>
     
