--- a/html/mission.html
+++ b/html/mission.html
@@ -8,20 +8,20 @@
     </head>
     <body>
     <h1 id="mission-statement">Mission Statement</h1>
-<p>The Consultancy excersizes professional skills in
-collaboration with other exceptional practitioners to creatively solve
-difficult and engaging problems for our clients. Our engineers use
-their deep expertise and problem-solving skills to make the difference,
-by applying techniques in infrastructure and software design,
-using modern architecture and innovative methods.</p>
+<p>The Consultancy world-class professionals collaborate with other
+exceptional practitioners to creatively solve difficult and engaging
+problems for our clients. Our consultants use their deep expertise and
+problem-solving skills to make the difference, by applying techniques
+in infrastructure and software design, using modern architecture and
+innovative methods.</p>
 <h1 id="solving-the-hardest-problems-together">Solving the Hardest Problems, Together</h1>
 <p>The Consultancy collaborates to creatively solve the most complex and
 engaging client challenges. We envision a future where our expertise
 in enterprise compute, cloud, and artificial intelligence transforms
 difficult problems into innovative, sustainable solutions—empowering
 organizations to thrive. By applying cutting-edge techniques in
-infrastructure, software design, and modern architecture, we ensure that every
-solution reflects our commitment to excellence, ethics, and impact.</p>
+infrastructure, software design, and modern architecture, we ensure that
+every solution reflects our commitment to excellence, ethics, and impact.</p>
 <h1 id="client-services">Client Services</h1>
 <p>Our team is comprised of world-class architects, engineers, and developers
 who embody the Consultancy’s commitment to innovation with purpose
@@ -29,7 +29,7 @@ and global collaboration. Our solutions reflect our values of equity,
 security, and ethical responsibility, ensuring clients
 benefit from cutting-edge technology that is accessible, reliable,
 and sustainable.</p>
-<h3 id="domains-of-expertise">Domains of Expertise</h3>
+<h1 id="domains-of-expertise">Domains of Expertise</h1>
 <ul>
 <li>Artificial Intelligence – Driving responsible AI innovation to create equitable opportunities.</li>
 <li>Cloud Migration &amp; Hosting – Enabling global access to scalable, secure infrastructure.</li>
@@ -40,11 +40,14 @@ and sustainable.</p>
 <h1 id="who-do-we-serve">Who do we serve?</h1>
 <p>Our clients have complexity they need to manage, interesting problems
 that need solutions, systems that need enhancement or integration,
-opportunities to engineer and build better systems. We have successfully deployed
-large-scale solutions to meet our clients automation, data collection and
-analysis, and service provisioning.</p>
-<h1 id="contact">Contact</h1>
+opportunities to engineer and build better systems. We have successfully
+deployed large-scale solutions to meet our clients automation, data
+collection and analysis, and service provisioning.</p>
+    <h1 id="contact">Contact</h1>
 <p>Lets talk about your project.</p>
-<p>&mdash; "Joel E Carlson" &lt;Joel.Elmer.Carlson@outlook.com&gt;</p>
-    </body></html>
+<p>"Joel E Carlson" &lt;Joel.Elmer.Carlson@outlook.com&gt;</p>
+<p>&mdash; <a href="https://github.com/joelelmercarlson/about">Github</a></p>
+<p>&mdash; <a href="https://www.linkedin.com/in/joel-carlson-290ba0">LinkedIN</a></p>
+    </body>
+    </html>
     
