--- a/html/resume.html
+++ b/html/resume.html
@@ -18,12 +18,11 @@ Cloud projects for the most mission-critical workloads.</p>
 <ul>
 <li>Architecture &amp; Engineering &amp; Production Support for following platforms: Linux, RedHat Enterprise Linux, AIX, Ubuntu, Solaris, Exadata, Oracle, Hadoop, Kubernetes, VMWare, Nutanix.</li>
 <li>DevOps Engineering &amp; Production Support for following: GitHub, Jenkins, Ansible; Terraform, Kubernetes and containers.</li>
+<li>Mission-critical workloads: EMR for patient facing care, Tricare and HealthCare.gov.</li>
+<li>Deep-expertise and real-world audit and compliance: PCI DSS, HIPPA, FHIR, FTI, SOX, DISA STIG.</li>
+<li>Vendor relationship of strategic partners: RedHat, HP, Dell, IBM and Broadcom.</li>
 <li>Lead successful datacenter migrations into public clouds.</li>
-<li>Lead, delivered results, for capital projects like datacenter rationalization.</li>
 <li>Proven leadership w/ globally distributed teams.</li>
-<li>Hands-On with customer facing commercialization: Tricare and HealthCare.gov.</li>
-<li>Vendor relationship of key infrastructure partners: RedHat, HP, Dell, Broadcom/Brocade and VMWare.</li>
-<li>Consistent delivery of leadership and innovative solutions to the company.</li>
 </ul>
 <h1 id="education">Education</h1>
 <p>Bachelor of Arts in Computer Science | University of Minnesota, Morris MN | Graduated 1995</p>
