--- a/html/readme.html
+++ b/html/readme.html
@@ -18,24 +18,17 @@
 </div>
 
 <h1 id="deep-technical-expertise">Deep Technical Expertise</h1>
-<p>The Consultancy collaborates with world-leading organizations to enable
-powerful technologies and agile processes&mdash;enhancing value and
-impact. From AI and Automation to Analytics and the Cloud, we can help
-clients implement the art of the possible.</p>
-<p>&mdash; 30+ years Linux Open Source Software &amp; Solutions</p>
-<p>&mdash; 30+ years C/C++ development</p>
-<p>&mdash; 30+ years Haskell functional programming development </p>
-<p>&mdash; 25+ years Python development and automation</p>
-<p>&mdash; 20+ years hyper-scale datacenter virtualization and automation</p>
-<p>&mdash; 20+ years Enterprise Compute, Storage and Networking</p>
-<p>&mdash; 20+ years IT Service Management and Regulatory Compliance (STIG/DISA/FISMA)</p>
-<p>&mdash; 20+ years DNS, L0-L7 Full-stack, GTM/LTM</p>
-<p>&mdash; 15+ years SDN, SDS, IPAM, NF/NFV</p>
+<p>Joel E Carlson collaborates with world-leading organizations to improve
+business performance, turn risk into opportunities, enable powerful
+technologies and agile processes&mdash;enhancing value throughout the
+organization. From AI and Automation to advanced analytics and the cloud,
+we can help clients implement the art of the possible.</p>
+<p>&mdash; 20+ Deep-expertise and real-world audit and compliance: PCI DSS, HIPPA, FHIR, FTI, SOX, DISA STIG.</p>
+<p>&mdash; 20+ years IT Service Management and cyber-security incident resposne.</p>
+<p>&mdash; 20+ years Python development and automation</p>
 <p>&mdash; 15+ years Java, Javascript, NodeJS development </p>
-<p>&mdash; 10+ years Cloud Modernization and Migration</p>
+<p>&mdash; 10+ years AI, Analytics and Cloud.</p>
 <p>&mdash; 10+ years containers and kubernetes</p>
-<p>&mdash; 5+ years Go development</p>
-<p>&mdash; 5+ years AI development</p>
 <h1 id="locations">Locations</h1>
 <p>&mdash; North-America, Asia/Pacific.</p>
     <h1 id="contact">Contact</h1>
