--- a/html/readme.html
+++ b/html/readme.html
@@ -22,7 +22,7 @@
 business performance, turn risk into opportunities, enable powerful
 technologies and agile processes&mdash;enhancing value throughout the
 organization. From AI and Automation to advanced analytics and the cloud,
-we can help clients implement the art of the possible.</p>
+I can help clients implement the art of the possible.</p>
 <p>&mdash; 20+ Deep-expertise and real-world audit and compliance: PCI DSS, HIPPA, FHIR, FTI, SOX, DISA STIG.</p>
 <p>&mdash; 20+ years IT Service Management and cyber-security incident resposne.</p>
 <p>&mdash; 20+ years Python development and automation</p>
