--- a/html/resume.html
+++ b/html/resume.html
@@ -9,17 +9,16 @@
     <body>
     <h1 id="joel-e-carlson">Joel E Carlson</h1>
 <p>4445 St Andrews Drive Blaine, MN 55449 | joel.elmer.carlson@outlook.com | (612) 839-0754</p>
-<p>I am pursuing the role of Principal Engineer. I have extensive automation
-expertise in Linux, NodeJS, Python, Haskell and cloud platforms. I will
-use my extensive engineering experience to deliver AI, Automation and
-Cloud projects for the most mission-critical workloads.</p>
+<p>I am pursuing the role of Principal Engineer. I have extensive automation ability in Linux, NodeJS, Python, Haskell, and cloud platforms. I will use my extensive engineering experience to deliver AI, Automation and Cloud projects for the most mission-critical workloads.</p>
 <h1 id="experience">Experience</h1>
-<p>Optum | Eden Prairie, MN | Principal Engineer | 2015 – 2025</p>
+<p>Optum | Eden Prairie, MN | Principal Engineer | 2010 – 2025</p>
 <ul>
-<li>Architecture &amp; Engineering &amp; Production Support for following platforms: Linux, RedHat Enterprise Linux, AIX, Ubuntu, Solaris, Exadata, Oracle, Hadoop, Kubernetes, VMWare, Nutanix.</li>
-<li>DevOps Engineering &amp; Production Support for following: GitHub, Jenkins, Ansible; Terraform, Kubernetes and containers.</li>
+<li>Architecture &amp; Engineering &amp; Production Support for following platforms: Linux, RedHat Enterprise Linux, AIX, Debian, Solaris, Oracle, VMWare, and Nutanix.</li>
+<li>Architect &amp; Engineering &amp; Production Support for following storage platforms: HPE Primera, Pure Systems, Infinidat, Dell, NetApp, Brocade, ceph, gluster, VSAN, gpfs, NFS, ISCSI, FiberChannel.</li>
+<li>Expert in Disaster Recovery / Business Continuity, ransomware response, and cybersecurity.</li>
+<li>Expert in DevOps Engineering &amp; Production Support for following: GitHub, Jenkins, Ansible; Terraform, Kubernetes and containers.</li>
 <li>Mission-critical workloads: EMR for patient facing care, Tricare and HealthCare.gov.</li>
-<li>Deep-expertise and real-world audit and compliance: PCI DSS, HIPPA, FHIR, FTI, SOX, DISA STIG.</li>
+<li>Strong capabilities and real-world audit and compliance experience: PCI DSS, HIPPA, FHIR, FTI, SOX, DISA STIG.</li>
 <li>Vendor relationship of strategic partners: RedHat, HP, Dell, IBM and Broadcom.</li>
 <li>Lead successful datacenter migrations into public clouds.</li>
 <li>Proven leadership w/ globally distributed teams.</li>
